data/all_generated_tests/raw_wast_tests/nop_InvalidorInconsistentControlFlowGraph_494.wast
;; 5. **Test Description**: Place `nop` between combinations of `block`, `loop`, `if`, and `else` structures, checking if all entry and exit points are properly recognized.    **Constraint Checked**: Mixing control constructs with `nop` maintains flow integrity.    **Relation to CFG**: Ensures control structures’ entry/exit are correctly identified amidst multiple `nops`.

(assert_invalid
  (module
    (func (block (nop) (loop (nop) (if (nop) (else (nop)))))))
  "type mismatch"
)